# Siren

./: .gitignore  Cargo.toml
src/: feishu.rs  main.rs  models.rs  services.rs
src/models/: apple_music.rs  lyric_json.rs  lyric_xml.rs  synced_lyric_xml.rs  user_storefront.rs
src/services/: apple_music_url.rs  response_handler.rs  token_handler.rs
