[package]
name = "Siren"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["macros"] }
chrono = "0.4.38"
dotenv = "0.15.0"
fancy-regex = "0.13.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
structopt = "0.3.26"
tokio = { version = "1.41.0", features = ["full"] }
